<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/newgame"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/score_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/tap_to_play"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/player_score_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:text="@string/player_score"
        android:textStyle="bold"
        android:textAlignment="center"
        android:textSize="18sp"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/score_text_view" />

    <TextView
        android:id="@+id/computer_score_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="260dp"
        android:layout_marginEnd="124dp"
        android:text="@string/computer_score"
        android:textStyle="bold"
        android:textAlignment="center"
        android:textSize="18sp"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/score_text_view" />

    <Button
        android:id="@+id/throw_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="448dp"
        android:layout_marginBottom="67dp"
        android:text="@string/throw_dice"
        app:layout_constraintBottom_toBottomOf="@+id/back_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/player_score_text_view"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/back_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.482"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/reroll_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="448dp"
        android:text="@string/rerollButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.156"
        app:layout_constraintStart_toEndOf="@+id/back_button"
        app:layout_constraintTop_toBottomOf="@+id/player_score_text_view" />

    <Button
        android:id="@+id/score_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="19dp"
        android:text="@string/score"
        app:layout_constraintBottom_toTopOf="@+id/back_button"
        app:layout_constraintEnd_toStartOf="@+id/reroll_button"
        app:layout_constraintStart_toEndOf="@+id/throw_button"/>

    <EditText
        android:id="@+id/target_score_edit_text"
        android:layout_width="291dp"
        android:layout_height="54dp"
        android:layout_marginBottom="20dp"
        android:hint="Enter target score : "
        android:inputType="number"
        android:padding="16dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/player_score_text_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.233"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="326dp"
        android:layout_height="127dp"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.552"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/player_score_text_view">

        <ImageView
            android:id="@+id/player_dice_2"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:paddingRight="12dp"
            android:src="@drawable/dice_2" />

        <ImageView
            android:id="@+id/player_dice_4"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:paddingRight="12dp"
            android:src="@drawable/dice_4" />

        <ImageView
            android:id="@+id/player_dice_3"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:paddingRight="12dp"
            android:src="@drawable/dice_3" />

        <ImageView
            android:id="@+id/player_dice_1"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:paddingRight="12dp"
            android:src="@drawable/dice_1" />

        <ImageView
            android:id="@+id/player_dice_5"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:paddingRight="12dp"
            android:src="@drawable/dice_5" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="334dp"
        android:layout_height="139dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.597"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/computer_score_text_view">

        <ImageView
            android:id="@+id/computer_dice_2"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:paddingRight="12dp"
            android:src="@drawable/dice_2" />

        <ImageView
            android:id="@+id/computer_dice_4"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:paddingRight="12dp"
            android:src="@drawable/dice_4" />

        <ImageView
            android:id="@+id/computer_dice_3"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:paddingRight="12dp"
            android:src="@drawable/dice_3" />

        <ImageView
            android:id="@+id/computer_dice_1"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:paddingRight="12dp"
            android:src="@drawable/dice_1" />

        <ImageView
            android:id="@+id/computer_dice_5"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:paddingRight="12dp"
            android:src="@drawable/dice_5" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>